# pylossless

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: README.md  criteriafunction.md  parameters.md  qualitycontrol.md
docs/params/: 01-parameters.md  02-localparam.md  03-param_examples.md
docs/params/legacy/: 01-parameters.md  03-param_examples.md
docs/qc/: 01-running_QC_script.md  02-introduction_to_the_quality_control_procedure.md  03-interacting_with_the_data.md  04-making_decisions_about_the_data.md  05-practice_qc.md
docs/source/: conf.py
pylossless/: __init__.py  bids.py  flagging.py  pipeline.py  qc.py
pylossless/assets/: ll_default_config.yaml
pylossless/config/: config.py  rejection.py
tests/: artifact_reduction_metrics.py  conftest.py  documentation.md  ica_quality_metrics.py  snr_metrics.py  test_eeg_metrics.py  test_pipeline.py
